add example operations to modify data, refactoring of classes and code generation
