# src/main/java/com/example/api/downstream/CustomerCoreGateway.java
@@ -5,5 +5,9 @@ import com.example.api.model.CustomerCoreProfile;
 public interface CustomerCoreGateway {
 
     CustomerCoreProfile fetchCustomerProfile(String customerId);
+
+    CustomerCoreProfile createCustomerProfile(CustomerCoreProfile profile);
+
+    CustomerCoreProfile updateCustomerProfile(CustomerCoreProfile profile);
 }
 
